--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "devDependencies": {
     "@openzeppelin/contracts": "^3.1.0",
-    "ethereum-waffle": "^3.0.3"
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.3",
+    "mocha": "^8.1.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
-    "build": "waffle"
+    "build": "waffle",
+    "test": "export NODE_ENV=test && mocha"
   }
 }
