--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.3",
     "mocha": "^8.1.3",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "build": "waffle",
-    "test": "export NODE_ENV=test && mocha"
+    "test": "export NODE_ENV=test && mocha",
+    "clean": "rimraf ./build/",
+    "precompile": "yarn clean"
   }
 }
