--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ethereum-waffle": "^3.0.3",
     "mocha": "^8.1.3",
     "rimraf": "^3.0.2",
+    "solc": "0.6.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
