--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "precompile": "yarn clean"
   },
   "dependencies": {
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^8.2.0",
-    "ethers": "5.0.18"
+    "ethers": "^5.0.25"
   }
 }
